--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>New Heading</h1>
+    <h1 style="color:blue;">New Heading</h1>
     <h2>Sub heading</h2>
     Hello World
 </body>
