--- a/hello.html
+++ b/hello.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
+    <style>
+        h1 {
+            color: blue;
+        }
+    </style>
 </head>
 
 <body>
-    <h1 style="color:blue;">New Heading!!</h1>
+    <h1>New Heading!!</h1>
     <h2>Sub heading</h2>
     Hello World
 </body>
